--- a/people.htm
+++ b/people.htm
@@ -194,7 +194,25 @@ Dr. Sheng'en Shawn Hu is a postdoctoral research associate starting November 201
 Email: <a href="mailto:chd5n@virginia.edu">chd5n@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
 Chris is a General Surgery resident and a Research Fellow in the Department of Surgery and the Center for Public Health Genomics at the University of Virginia. He received his BA in Ethics, Politics, and Economics from Yale University and his MD from the University of Michigan. He was first exposed to informatics as a science while working as a commodities analyst at Louis Dreyfus Commodities, and he began analyzing high-dimensional bioinformatics data in the fMRI lab of Dr Jon-Kar Zubieta at the University of Michigan. He moved to Charlottesville for his residency in General Surgery and completed two years of clinical training prior to joining Dr Craig Slingluff's Surgical Oncology Training Grant under the mentorship of Dr Graham Casey in 2018. After two years of research, he will return to clinical training to complete his residency. Chris is a physician with growing expertise in bioinformatics and an interest in cancer genomics. His research focuses on molecular phenotyping and functional follow-up of GWAS-identified risk loci using high-throughput sequencing data in the setting of colorectal cancer.
-</p>
+</p><br>
+<p>
+<img align="right" src="images/qingying_chen.jpg" style="width:180px">
+<b>Qingying Chen</b></p>
+<p>
+<!--Email: <a href="mailto:chd5n@virginia.edu">chd5n@virginia.edu</a>-->
+(Starting January 2021)<br>
+</p><p style="width: 640px;" align="left">
+Qingying Chen will start her postdoctoral training in the lab in January 2021. She expects to complete her PhD in physics in December 2020 at the University of Tulsa. She received her B.S. in Applied Physics from Xi’an Jiaotong University in China. Her research focused on designing, simulating, and testing the interference filters for the phonic sensing, and developing coating techniques to functionalize the integrated sensing elements. She is interested in computational biology and excited to gain experience in bioinformatics research.
+</p><br>
+<p>
+<img align="right" src="images/billy_lamberti.jpg" style="height:180px">
+<b>William F. Lamberti</b></p>
+<p>
+<!--Email: <a href="mailto:chd5n@virginia.edu">chd5n@virginia.edu</a>-->
+(Starting January 2021)<br>
+</p><p style="width: 640px;" align="left">
+William Franz Lamberti received his B.A. in Mathematical Statistics from The College of New Jersey in 2015 and his M.S. in Statistical Science from George Mason University in 2017.  Before joining UVA, he is completing his PhD in Computational Sciences and Informatics with a specialization in Data Science from George Mason University as a Presidential Scholar.  His current research interests include image processing applications, shape analysis, and statistical and machine learning classification problems.  He is planning on incorporating skills in explainable machine learning and imaging to spatial genomics problems.
+</p><br>
 <hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
 <p>
@@ -250,22 +268,6 @@ Email: <a href="mailto:xq8zu@virginia.edu">xq8zu@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
 Xinyue is an undergraduate student (Class of 2021), double majoring in Biology and Statistics. Interested in both genetics and statistical analysis, she is interested in both obtaining knowledge and rich hands-on experience related. In her free time, she enjoys listening to music, traveling, drawing, and playing games. 
 </p><br><br><br>
-<!--<p>
-<img align="right" src="images/nathan_lee.jpg" style="width:180px">
-<b>Nathan Lee</b></p>
-<p>
-Email: <a href="mailto:nbl3cj@virginia.edu">nbl3cj@virginia.edu</a><br>
-</p><p style="width: 640px;" align="left">
-Nathan Lee is an undergraduate student (class of 2021) majoring in biochemistry and computer science. He wants to learn more about the applications and use of computer science and computational methods in other fields, such as computational biology. In his free time, he likes to listen to music, play games, and dance.
-</p><br><br><br>
-<p>
-<img align="right" src="images/cameron_her.jpg" style="width:180px">
-<b>Cameron Her</b></p>
-<p>
-Email: <a href="mailto:csh4bj@virginia.edu">csh4bj@virginia.edu</a><br>
-</p><p style="width: 640px;" align="left">
-Cameron Her is an undergraduate student (class of 2021) majoring in Biology and Mathematical Statistics. He's curious to explore the applications of statistics in the world of biological research. In his free time, Cameron participates in Hot Kids Comedy and Amuse Bouche Improv.
-</p><br><br><br>-->
 <p>
 <img align="right" src="images/drew_vanichkachorn.jpg" style="width:180px">
 <b>Drew Vanichkachorn</b></p>
@@ -307,14 +309,6 @@ Email: <a href="mailto:mjb6ep@virginia.edu ">mjb6ep@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
 Maggie Bujor is a Computer Science Major in the class of 2022. She is interested in learning more about the exciting advances in computational genomics at the intersection of data science and biology. In the future, she hopes to attend medical school to become a physician. Outside of class, she is a member of Virginia Dance Company, volunteers actively through Madison House, and enjoys exploring Charlottesville and the Shenandoah.
 </p><br>
-<!--<p>
-<img align="right" src="images/ishaan_dey.jpg" style="width:180px">
-<b>Ishaan Dey</b></p>
-<p>
-Email: <a href="mailto:id8tm@virginia.edu ">id8tm@virginia.edu</a><br>
-</p><p style="width: 640px;" align="left">
-Ishaan is an undergraduate student (Class of 2022) from Centreville, VA, intending to study Biostatistics and Economics on the pre-med track. He is particularly interested in exploring the intersection of machine learning and medical data. In his free time, Ishaan enjoys photography, playing basketball, and exploring the food scene at Charlottesville.
-</p><br><br><br>-->
 <p>
 <img align="right" src="images/minaal_khan.jpg" style="width:180px">
 <b>Minaal Khan</b></p>
@@ -346,14 +340,6 @@ Jasmine Dogu is an undergraduate student (Class of 2022) from Fairfax, VA double
 Email: <a href="mailto:ssm6s@virginia.edu">ssm6s@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
 Soumil Madhiwala is an undergraduate student majoring in Biology and minoring in Health and Well Being. He is interested in understanding the bridge between data science and medical data and applying this knowledge in future projects. After graduating, he hopes to attend medical school. He is currently involved in Third Year Council, Indian Student Association, and is a Sports Medicine Volunteer. In his free time, he loves playing sports, photography, and being around friends.
-</p><br>
-<p>
-<img align="right" src="images/taehee_kim.jpg" style="width:180px">
-<b>Taehee Kim</b></p>
-<p>
-Email: <a href="mailto:tk6ar@virginia.edu">tk6ar@virginia.edu</a><br>
-</p><p style="width: 640px;" align="left">
-Taehee is an undergraduate student (Class of 2022) from New Jersey. She is a Biology and Statistics double-major. She is excited to learn about the research methods used in Computational Biology, applying what she learned in her Biology and Statistics classes. She has been an Intro Bio Lab peer teacher, a Madison House volunteer, and an intern at the Avison Biomedical Research Center in South Korea. She is currently an Intro Chem Lab TA and works as a Korean translator at an orthopedic office. In her free time, she enjoys watching Netflix, Zumba, and training her dog, Kota. 
 </p><br>
 <p>
 <img align="right" src="images/kuki_davey.jpg" style="width:180px">
@@ -542,7 +528,7 @@ Aaron is an undergraduate student (Class of 2023) from Fairfax, VA, planning on 
 <p>The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: September 30, 2020</p>
+<p align="right">Last modified: October 12, 2020</p>
 
 </div>
 
