--- a/bart/index.htm
+++ b/bart/index.htm
@@ -64,24 +64,24 @@ ul.topnav li.icon {display: none;}
 </style>
 
 <title>BART</title>
-<link rel="shortcut icon" type="image/x-icon" href="http://faculty.virginia.edu/zanglab/bart/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="https://zanglab.github.io/bart/favicon.ico">
 </head>
 <body bgcolor="white" onload="update_modtime();" data-gr-c-s-loaded="true" cz-shortcut-listen="true">
 <div style="width: 900px; margin: auto;">
 <!--<img align="left" width="170" src="UVA-med-3.jpg">-->
 <img align="left" width="135" src="./IMG_1651.png">
-<h2 style="font-size: 28pt"><a href="http://faculty.virginia.edu/zanglab/bart" style="text-decoration:none;"><font color="#002F6C">BART</font></a></h2>
+<h2 style="font-size: 28pt"><a href="https://zanglab.github.io/bart" style="text-decoration:none;"><font color="#002F6C">BART</font></a></h2>
 <h2><font color="#002F6C"><u>B</u>inding <u>A</u>nalysis for <u>R</u>egulation of <u>T</u>ranscription</font></h2>
 
 <ul class="topnav" id="myTopnav">
-  <li><a href="http://faculty.virginia.edu/zanglab/bart/index.htm">Home</a></li>
+  <li><a href="https://zanglab.github.io/bart/index.htm">Home</a></li>
   <li><a class="active" href="http://bartweb.org" target="_blank">Web</a></li>
-  <li><a href="http://faculty.virginia.edu/zanglab/bart/index.htm#download">Download</a></li>
-  <li><a href="http://faculty.virginia.edu/zanglab/bart/index.htm#install">Installation</a></li>
-  <li><a href="http://faculty.virginia.edu/zanglab/bart/index.htm#tutorial">Tutorial</a></li>
-  <li><a href="http://faculty.virginia.edu/zanglab/bart/index.htm#faq">FAQ</a></li>
-  <li><a href="http://faculty.virginia.edu/zanglab/bart/index.htm#citation">Citation</a></li>
-  <li><a href="http://faculty.virginia.edu/zanglab/bart/index.htm#contact">Contact</a></li>
+  <li><a href="https://zanglab.github.io/bart/index.htm#download">Download</a></li>
+  <li><a href="https://zanglab.github.io/bart/index.htm#install">Installation</a></li>
+  <li><a href="https://zanglab.github.io/bart/index.htm#tutorial">Tutorial</a></li>
+  <li><a href="https://zanglab.github.io/bart/index.htm#faq">FAQ</a></li>
+  <li><a href="https://zanglab.github.io/bart/index.htm#citation">Citation</a></li>
+  <li><a href="https://zanglab.github.io/bart/index.htm#contact">Contact</a></li>
   <li class="icon">
     <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
   </li>
@@ -115,7 +115,7 @@ BART web interface can be accessed <a href="http://bartweb.org/" target="_blank"
 Current version: 2.0, updated May 15, 2020
 </p>
 <p>
-<a href="http://faculty.virginia.edu/zanglab/bart/bart_v2.0.tar.gz"><font color="#002F6C">BART2.0 for Python3</font></a> – Source code only (need to download data library separately)
+<a href="https://virginia.box.com/shared/static/031noe820hk888qzcxvw1cazol1gdhi0.gz"><font color="#002F6C">BART2.0 for Python3</font></a> – Source code only (need to download data library separately)
 <!-- <a href="bart_v2.0.tar.gz"><font color="#002F6C">BART v2.0 for Python3</font></a> – Source code only (need to download the data library separately) -->
 </p>
 
@@ -125,9 +125,9 @@ Current version: 2.0, updated May 15, 2020
 The human genome hg38 and the mouse genome mm10 are supported. 
 </p>
 <p>
-<a href="http://faculty.virginia.edu/zanglab/bart/hg38_library.tar.gz"><font color="#002F6C">hg38 library</font></a>
+<a href="https://virginia.box.com/shared/static/byufe8n6ft47hs4q7l6xxhyqnifjohm8.gz"><font color="#002F6C">hg38 library</font></a>
 <br>
-<a href="http://faculty.virginia.edu/zanglab/bart/mm10_library.tar.gz"><font color="#002F6C">mm10 library</font></a>
+<a href="https://virginia.box.com/shared/static/bxli2cc6zfj7h1llt9vx9km9u0d4vwhc.gz"><font color="#002F6C">mm10 library</font></a>
 <!-- 
 <a href="hg38_library.tar.gz"><font color="#002F6C">hg38 library</font></a>
 <br>
@@ -141,9 +141,9 @@ The human genome hg38 and the mouse genome mm10 are supported.
 The union DNaseI hypersensitive sites (UDHS) used in the BART model. (They are NOT required for BART installation.)
 </p>
 <p>
-<a href="http://faculty.virginia.edu/zanglab/bart/hg38_UDHS.bed.gz"><font color="#002F6C">hg38 UDHS</font></a>
+<a href="https://virginia.box.com/shared/static/46c0xgwgictb1hmhxhmwo641ym6nlcf5.gz"><font color="#002F6C">hg38 UDHS</font></a>
 <br>
-<a href="http://faculty.virginia.edu/zanglab/bart/mm10_UDHS.bed.gz"><font color="#002F6C">mm10 UDHS</font></a>
+<a href="https://virginia.box.com/shared/static/s8dsgbxw76v63wkq4p8rkz3gshdcdgzp.gz"><font color="#002F6C">mm10 UDHS</font></a>
 <br></p>
 
 <hr>
@@ -186,14 +186,15 @@ The unpacked libraries occupy 14GB hard drive storage in the download directory.
 Please download from the link provided above or use the following command lines. 
 
 <p style="font-family:courier;padding-left:64px;">
-$ wget https://faculty.virginia.edu/zanglab/bart/hg38_library.tar.gz <br>
-$ wget https://faculty.virginia.edu/zanglab/bart/mm10_library.tar.gz
+$ wget https://virginia.box.com/shared/static/byufe8n6ft47hs4q7l6xxhyqnifjohm8.gz -O hg38_library.tar.gz <br>
+$ wget https://virginia.box.com/shared/static/bxli2cc6zfj7h1llt9vx9km9u0d4vwhc.gz -O mm10_library.tar.gz
 
 
 <p>
 To install a source distribution of BART, unpack the distribution tarball and go to the directory where you unpacked BART. 
 </p>
 <p style="font-family:courier;padding-left:64px;">
+$ wget https://virginia.box.com/shared/static/031noe820hk888qzcxvw1cazol1gdhi0.gz -O bart_v2.0.tar.gz <br>
 $ tar zxf bart_v2.0.tar.gz
 <br>
 $ cd bart_v2.0
@@ -368,7 +369,7 @@ Zhenjia Wang, Mete Civelek, Clint Miller, Nathan Sheffield, Michael J. Guertin, 
 BART is developed and maintained by the <a href="http://zanglab.org" target="_blank">Chongzhi Zang Lab</a> at the University of Virginia. Please <a href="mailto:zang@virginia.edu">email us</a> for any questions. 
 </p>
 <hr>
-<p align="right">Last modified: May 16, 2020</p>
+<p align="right">Last modified: October 15, 2020</p>
 </div>
 
 <!-- Start of StatCounter Code for Default Guide -->
