--- a/people.htm
+++ b/people.htm
@@ -222,7 +222,7 @@ William Franz Lamberti received his B.A. in Mathematical Statistics from The Col
 Office: West Complex, Suite 6131<br>
 Email: <a href="mailto:mt9tz@virginia.edu">mt9tz@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
-Mengxue Tian is a research scholar and will start her PhD studies in the Biomedical Sciences (BIMS) program in Fall 2020. Before joining UVA, she received her B.E. and M.S. in Bioinformatics from School of Life Science and Technology, Tongji University in China. She is working on high-throughput sequencing data analysis over different disease and development systems.
+Mengxue Tian is a research specialist in the lab and will start her PhD studies in the Biomedical Sciences (BIMS) program in 2021. Before joining UVA, she received her B.E. and M.S. in Bioinformatics from School of Life Science and Technology, Tongji University in China. She is working on high-throughput sequencing data analysis over different disease and development systems.
 </p><br>
 <p>
 <img align="right" src="images/hongpan_zhang.jpg" style="width:180px">
@@ -231,7 +231,7 @@ Mengxue Tian is a research scholar and will start her PhD studies in the Biomedi
 Office: West Complex, Room 6131<br>
 Email: <a href="mailto:hz9fq@virginia.edu">hz9fq@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
-Hongpan Zhang will be a PhD student in the Biomedical Sciences (BIMS) program starting Fall 2020. He obtained two bachelor's degrees in life sciences and software engineering from Sichuan University. Hongpan is keen to study the connection between genomic phenomena and diseases. He hopes to raise his knowledge of biological issues in his research work. Hongpan is a basketball fan and also loves other sports events. He's interested in historical knowledge as well.
+Hongpan Zhang is a research specialist in the lab and will be a PhD student in the Biomedical Sciences (BIMS) program starting 2021. He obtained two bachelor's degrees in life sciences and software engineering from Sichuan University. Hongpan is keen to study the connection between genomic phenomena and diseases. He hopes to raise his knowledge of biological issues in his research work. Hongpan is a basketball fan and also loves other sports events. He's interested in historical knowledge as well.
 </p><br>
 <p>
 <img align="right" src="images/audrey_putelo.jpg" style="width:180px">
@@ -240,7 +240,15 @@ Hongpan Zhang will be a PhD student in the Biomedical Sciences (BIMS) program st
 Email: <a href="mailto:amp9cd@virginia.edu">amp9cd@virginia.edu</a><br>
 </p><p style="width: 640px;" align="left">
 Audrey Putelo is a first-year PhD student in the Biomedical Sciences (BIMS) program and is doing her first rotation in the lab during Summer 2020. Audrey received her BS in Biomolecular Sciences from the University of Michigan, Ann Arbor in May of 2020 where she held research positions studying cancer biology and biological chemistry.  She is very excited to continue her scientific endeavors at the University of Virginia and delve into the world of computational biology.
-</p><br>
+</p><br><br>
+<p>
+<img align="right" src="images/jose_verdezoto.jpg" style="width:180px">
+<b>Jose Verdezoto</b></p>
+<p>
+Email: <a href="mailto:jev4xy@virginia.edu">jev4xy@virginia.edu</a><br>
+</p><p style="width: 640px;" align="left">
+Jose Verdezoto is a first-year PhD student in the Biomedical Sciences (BIMS) program doing rotation in the lab. Originally from Quito, Ecuador, he received his BS in Molecular biology and Genetics from the University of Washington, Seattle. After graduation, he worked at the Fred Hutchinson Cancer Research Center for a couple of years investigating the role of nuclear lipid droplets in germline development. In order to start training in computational biology, he moved to Charlottesville and joined the lab of Dr. Nathan Sheffield at the UVA Center for Public Health Genomics. He mostly worked on developing software architecture for hosting of genomic region data as well as analysis of single cell RNA-seq data. During his graduate career, he hopes to study different ways to integrate different types of high-throughput genomics data to understand disease in a more holistic way. During his free time he loves to play/watch tennis, learn about finance and stocks trading, and watch comedy TV shows.
+</p>
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
 <h4><font color="#002F6C">Class of 2021</font></h4>
