--- a/index.htm
+++ b/index.htm
@@ -142,6 +142,18 @@ function myFunction() {
 <div class="row">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">October 2020</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Chongzhi receives a grant from Virginia Commonwealth Medical Research Board (CHRB)!
+		</p>
+	</div>
+</div>
+<div class="row">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">September 2020</font>
 		</p>
 	</div>
@@ -579,7 +591,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: September 30, 2020</p>
+<p align="right">Last modified: October 24, 2020</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
