--- a/research.htm
+++ b/research.htm
@@ -185,14 +185,20 @@ High-dimensional genomic data analysis is challenging because of noises and bias
 <div class="row">
 <div class="column">
 <p>
-<a href="https://www.nih.gov/" target="_blank"><img align="left" src="images/nih.png" style="width:100px"></a>
+<a href="https://www.nih.gov/" target="_blank"><img align="left" src="images/nih.png" style="width:110px"></a>
 </p>
 </div>
-<div class="column">
+<!--<div class="column">
 <p>
 <br>
 <a href="https://www.cancer.gov/" target="_blank"><img align="left" src="images/nci.png" style="width:100px"></a>
-</p></div>
+</p>
+</div>-->
+<div class="column">
+<p>
+<a href="http://www.chrb.org/" target="_blank"><img align="center" src="images/chrb.jpg" style="height:100px"></a>
+</p>
+</div>
 <div class="column">
 <p>
 <a href="https://www.cancer.org/" target="_blank"><img align="center" src="images/acs.png" style="width:100px"></a>
@@ -211,7 +217,7 @@ High-dimensional genomic data analysis is challenging because of noises and bias
 </div>
 </div>
 <hr>
-<p align="right">Last modified: June 20, 2020</p>
+<p align="right">Last modified: October 27, 2020</p>
 
 </div>
 
