--- a/index.htm
+++ b/index.htm
@@ -147,6 +147,8 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		<a href="https://news.virginia.edu/content/cancers-dangerous-renovations-our-chromosomes-revealed" target="_blank">See UVA Today's news report about our cancer CTCF research</a>!
+		<br><br>
 		Chongzhi receives a grant from Virginia Commonwealth Medical Research Board (CHRB)!
 		</p>
 	</div>
@@ -591,7 +593,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: October 24, 2020</p>
+<p align="right">Last modified: October 27, 2020</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
