--- a/index.htm
+++ b/index.htm
@@ -147,7 +147,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		<a href="https://news.virginia.edu/content/cancers-dangerous-renovations-our-chromosomes-revealed" target="_blank">See UVA Today's news report about our cancer CTCF research</a>!
+		Media reports about the lab's cancer CTCF research are released at <a href="https://news.virginia.edu/content/cancers-dangerous-renovations-our-chromosomes-revealed" target="_blank"><b>UVA Today</b></a> and local news <a href="https://www.cbs19news.com/story/42818985/uva-finds-how-cancer-gets-comfortable-in-our-own-bodies" target="_blank"><b>CBS19</b></a>!
 		<br><br>
 		Chongzhi receives a grant from Virginia Commonwealth Medical Research Board (CHRB)!
 		</p>
@@ -593,7 +593,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: October 27, 2020</p>
+<p align="right">Last modified: October 30, 2020</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
