--- a/publication.htm
+++ b/publication.htm
@@ -138,10 +138,10 @@ Celestia Fang*, <u>Zhenjia Wang</u>*, Cuijuan Han, Stephanie L. Safgren, Kathryn
 <br>
 <i><b>Genome Biology</b></i> 21, 247 (2020)
 </p></li>
-<li><p><a href="http://journal.hep.com.cn/qb/EN/10.1007/s40484-020-0225-2" target="_blank">RECOGNICER: A coarse-graining approach for identifying broad domains from ChIP-seq data</a><br>
+<li><p><a href="http://journal.hep.com.cn/qb/EN/article/downloadArticleFile.do?attachType=PDF&id=28359" target="_blank">RECOGNICER: A coarse-graining approach for identifying broad domains from ChIP-seq data</a><br>
 <u>Chongzhi Zang</u><sup>#</sup>, <u>Yiren Wang</u>, Weiqun Peng<sup>#</sup>
 <br>
-<i><b>Quantitative Biology</b></i>, in press (2020)
+<i><b>Quantitative Biology</b></i>, <a href="https://doi.org/10.1007/s40484-020-0225-2" target="_blank">doi:10.1007/s40484-020-0225-2</a> (2020)
 </p></li>
 <li><p><a href="https://doi.org/10.1016/j.isci.2020.101518" target="_blank">Polyadenylation of histone H3.1 mRNA promotes cell transformation by displacing H3.3 from gene regulatory elements</a><br>
 Danqi Chen*, Qiao Yi Chen*, <u>Zhenjia Wang</u>*, Yusha Zhu, Thomas Kluz, <u>Wuwei Tan</u>, Jinquan Li, Feng Wu, Lei Fang, Xiaoru Zhang, <u>Rongquan He</u>, Steven Shen, Hong Sun, <u>Chongzhi Zang</u><sup>#</sup>, Chunyuan Jin<sup>#</sup>, Max Costa<sup>#</sup>
@@ -319,7 +319,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: September 30, 2020</p>
+<p align="right">Last modified: November 20, 2020</p>
 </div>
 
 </body></html>
