--- a/software.htm
+++ b/software.htm
@@ -114,6 +114,12 @@ ul.topnav li.icon {display: none;}
 </p></td>
 </tr>
 <tr>
+<td style="width:100px; height:100px"><a href="https://zanglab.github.io/SICER2" target="_blank"><img src="images/recognicer_logo.jpg" style="width:80px"></a></td>
+<td><p>
+<b><a href="https://zanglab.github.io/SICER2" target="_blank">RECOGNICER</a></b> (<u>Re</u>cursive <u>co</u>arse-<u>g</u>rai<u>n</u>ing <u>i</u>dentification for <u>C</u>hIP-seq <u>e</u>nriched <u>r</u>egions), a ChIP-seq ultra-broad peak calling method. [<a href="http://journal.hep.com.cn/qb/EN/article/downloadArticleFile.do?attachType=PDF&id=28359" target="_blank">Publication</a>] [<a href="https://github.com/zanglab/recognicer" target="_blank">Source code</a>] [Package built in <a href="https://zanglab.github.io/SICER2" target="_blank">SICER2</a>] 
+</p></td>
+</tr>
+<tr>
 <td style="width:100px; height:100px"><a href="https://zanglab.github.io/SICER2" target="_blank"><img src="images/sicer_logo.jpg" style="width:80px"></a></td>
 <td><p>
 <b><a href="https://zanglab.github.io/SICER2" target="_blank">SICER</a></b> (<u>S</u>patial-clustering <u>I</u>dentification of <u>C</u>hIP-<u>E</u>nriched <u>R</u>egions), a ChIP-Seq data analysis method. [<a href="http://home.gwu.edu/~wpeng/Software.htm" target="_blank">Package (v1.1)</a>] [<a href="https://academic.oup.com/bioinformatics/article/25/15/1952/212783" target="_blank">Publication</a>]<br><br>
@@ -134,7 +140,7 @@ ul.topnav li.icon {display: none;}
 </tr>
 </table>
 <hr>
-<p align="right">Last modified: August 20, 2020</p>
+<p align="right">Last modified: November 20, 2020</p>
 </div>
 
 </body></html>
