--- a/contact.htm
+++ b/contact.htm
@@ -114,12 +114,9 @@ function myFunction() {
 -->
 <h2 align="center"><font color="#002F6C">Contact Information</font></h2>
 <hr>
-<iframe align="right" width="600" height="360" id="gmap_canvas" src="https://maps.google.com/maps?q=West%20Complex&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-<!--<img align="right" src="images/uva_ground2.jpg" style="width:600px">
-<iframe align="right" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2651.7458384953184!2d-78.5024211411241!3d38.03391727061369!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b386464fed564b%3A0xa98042755a1e2ebf!2sWest+Complex%2C+Charlottesville%2C+VA+22903!5e0!3m2!1sen!2sus!4v1495693722225" width="600" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
--->
+<iframe align="right" width="600" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=West+Complex,+Charlottesville,+VA+22903&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 <h3><font color="#002F6C">Mailing Address</font></h3>
-<p>
+<p style="line-height: 1.6;">
 <a href="https://med.virginia.edu/cphg/" target="_blank" style="text-decoration:none;">Center for Public Health Genomics</a><br>
 <a href="https://www.virginia.edu/" target="_blank" style="text-decoration:none;">University of Virginia</a><br>
 P. O. Box 800717<br>
@@ -127,16 +124,16 @@ Charlottesville, VA 22908<br>
 U. S. A.
 </p>
 <h3><font color="#002F6C">Lab/Office Location</font></h3>
-<p>
+<p style="line-height: 1.6;">
 <a href="https://www.google.com/maps/dir//38.033306,-78.501216/@38.033522,-78.5055676,16z" target="_blank" style="text-decoration:none;">West Complex</a><br>
 6th Floor, Suite 6131<br>
 1300 Jefferson Park Avenue<br>
 Charlottesville, VA 22903
-</p><p>
+</p><p style="line-height: 1.6;">
 Phone: 434-243-5397<br>
 Fax: 434-982-1815<br>
 Email: <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>
-</p><br>
+</p>
 <hr>
 <h2 align="center"><font color="#002F6C">Affiliations</font></h2>
 <hr>
@@ -147,7 +144,7 @@ Email: <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>
 <h4><a href="https://uvahealth.com/services/cancer-research" target="_blank" style="text-decoration:none;"><font color="#002F6C">UVA Cancer Center</font></a></h3>
 <h4><a href="https://datascience.virginia.edu/" target="_blank" style="text-decoration:none;"><font color="#002F6C">School of Data Science</font></a></h3>
 <hr>
-<p align="right">Last modified: January 14, 2020</p>
+<p align="right">Last modified: November 25, 2020</p>
 </div>
 
 </body></html>
