--- a/publication.htm
+++ b/publication.htm
@@ -118,7 +118,7 @@ function myFunction() {
 <hr>
 <h3><font color="#002F6C">Recent Preprints</font></h3>
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
-<ol style="padding-left: 24px;">
+<ol style="padding-left: 24px; line-height: 1.6;">
 <li><p><a href="https://www.biorxiv.org/content/10.1101/2020.08.19.258095v1" target="_blank">BART3D: Inferring transcriptional regulators associated with differential chromatin interactions from Hi-C data</a><br> 
 <u>Zhenjia Wang</u>, <u>Yifan Zhang</u>, <u>Chongzhi Zang</u>
 <br>
@@ -132,7 +132,7 @@ function myFunction() {
 </ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
-<ol style="padding-left: 24px;">
+<ol style="padding-left: 24px; line-height: 1.6;">
 <li><p><a href="https://doi.org/10.1186/s13059-020-02152-7" target="_blank">Cancer-specific CTCF binding facilitates oncogenic transcriptional dysregulation</a><br> 
 Celestia Fang*, <u>Zhenjia Wang</u>*, Cuijuan Han, Stephanie L. Safgren, Kathryn A. Helmin, Emmalee R. Adelman, Valentina Serafin, Giuseppe Basso, Kyle P. Eagen, Alexandre Gaspar-Maia, Maria E. Figueroa, Benjamin D. Singer, Aakrosh Ratan, Panagiotis Ntziachristos<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
 <br>
@@ -319,7 +319,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: November 20, 2020</p>
+<p align="right">Last modified: November 25, 2020</p>
 </div>
 
 </body></html>
