--- a/research.htm
+++ b/research.htm
@@ -125,35 +125,35 @@ function myFunction() {
 <h2 align="center"><font color="#002F6C">Research</font></h2>
 <hr>
 <h3><font color="#002F6C">Research Description</font></h3>
-<p>The research in my lab focuses on developing computational methodologies and integrative genomics approaches to study epigenetics and transcriptional regulation of gene expression in a variety of mammalian cell systems and human diseases such as cancer.
-</p><p>
+<p style="line-height: 1.6;">The research in my lab focuses on developing computational methodologies and integrative genomics approaches to study epigenetics and transcriptional regulation of gene expression in a variety of mammalian cell systems and human diseases such as cancer.
+</p><p style="line-height: 1.6;">
 How gene expression is regulated in chromatin is a fundamental question in molecular biology. High-throughput technologies such as next-generation sequencing (NGS) have become powerful tools for studying gene regulation at the genomic scale. We conduct computational research using quantitative models and innovative data science approaches that leverage various genomics technologies to find new biology. Some research directions include:
 </p>
 <br>
 <h3><font color="#002F6C">1. <i>Next-generation sequencing bioinformatics</i></font></h2>
 <img align="right" src="images/sicer.jpg" style="width:240px">
-<p style="width: 620px">
+<p style="width: 620px; line-height: 1.6;">
 We are interested in developing innovative statistical methods and new algorithms for analyzing massive data from next-generation sequencing (NGS) coupled with various assays for studying genomic chromatin profiles, such as ChIP-seq for transcription factor and histone modification profiling, ATAC-seq and DNase-seq for chromatin accessibility profiling, etc. As a pioneer in ChIP-seq bioinformatics, we developed SICER (<a href="https://academic.oup.com/bioinformatics/article/25/15/1952/212783" target="_blank"><i>Bioinformatics</i> 2009</a>), one of the most widely used methods for ChIP-seq data analysis with exceptional performance for board histone marks. We are developing novel quantitative models for analyzing DNase/ATAC-seq data and for studying chromatin dynamics at both population and single-cell levels.
 </p>
 <br><br>
 <h3><font color="#002F6C">2. <i>Chromatin, epigenetics, and transcriptional regulation</i></font></h2>
 <img align="right" src="images/marge.jpg" style="width:240px">
-<p style="width: 620px">
+<p style="width: 620px; line-height: 1.6;">
 Our ultimate goal is to understand the fundamental mechanisms in transcriptional regulation and the functions of chromatin. We characterized dozens of histone modifications and histone modifying enzymes at the genomic scale (<a href="http://www.nature.com/ng/journal/v40/n7/full/ng.154.html" target="_blank"><i>Nat Genet</i> 2008</a>, <a href="http://www.nature.com/ng/journal/v41/n8/full/ng.409.html" target="_blank"><i>Nat Genet</i> 2009</a>, <a href="http://www.cell.com/abstract/S0092-8674(09)00841-1" target="_blank"><i>Cell</i> 2009</a>, <a href="http://www.cell.com/cell-stem-cell/abstract/S1934-5909(08)00582-1" target="_blank"><i>Cell Stem Cell</i> 2009</a>). Leveraging the large amount of publicly available ChIP-seq data, we developed several computational methods, including MARGE (<a href="http://genome.cshlp.org/content/26/10/1417" target="_blank"><i>Genome Res</i> 2016</a>) and BART (<a href="https://academic.oup.com/bioinformatics/advance-article-abstract/doi/10.1093/bioinformatics/bty194/4956015" target="_blank"><i>Bioinformatics</i> 2018</a>), for predicting cis-regulatory elements and transcriptional regulators from differentially expressed gene sets using integrative learning approaches. We are specifically interested in studying functional enhancer regulation of gene expression in the high-order dynamic structure of chromatin in cancer and immune systems.
 </p>
 <br><br>
 <h3><font color="#002F6C">3. <i>Genomic data integration for global regulatory networks</i></font></h2>
 <img align="right" src="images/mancie.jpg" style="width:240px">
-<p style="width: 620px">
+<p style="width: 620px; line-height: 1.6;">
 High-dimensional genomic data analysis is challenging because of noises and biases in high-throughput experiments. We developed MANCIE (<a href="http://www.nature.com/articles/ncomms11305" target="_blank"><i>Nat Commun</i> 2016</a>), a method for bias correction and data integration of cross-platform genomic profiles on the same samples, using a Bayesian-supported principal component analysis (PCA)-based approach. We are interested in using statistical modeling and innovative data science approaches to integrate public multi-omics data for characterizing physical properties of mammalian chromatin structures and dynamic interactions between chromatin and DNA in human cell systems.
 </p>
 <br><br><br>
 <hr>
 <h3><font color="#002F6C">Collaborations</font></h3>
-<p>Computational biology is an interdisciplinary science. It cannot thrive without close collaborations between researchers with different backgrounds and expertise. We are creating a collaborative research team and a cross-disciplinary environment in the lab, and we always commit to collaborations on a variety of research projects with experimental biologists, geneticists, oncologists, as well as statisticians, computer scientists, mathematicians, and physicists.</p>
-<p>Our collaborators include:
+<p style="line-height: 1.6;">Computational biology is an interdisciplinary science. It cannot thrive without close collaborations between researchers with different backgrounds and expertise. We are creating a collaborative research team and a cross-disciplinary environment in the lab, and we always commit to collaborations on a variety of research projects with experimental biologists, geneticists, oncologists, as well as statisticians, computer scientists, mathematicians, and physicists.</p>
+<p style="line-height: 1.6;">Our collaborators include:
 </p>
-<ul style="list-style-type:disc; padding-left: 24px;"><p>
+<ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/gc8r/" target="_blank"><font color="#002F6C">Graham Casey</font></a>, Center for Public Health Genomics, University of Virginia</li>
 <li><a href="https://lsa.umich.edu/stats/people/faculty/YangChen.html" target="_blank"><font color="#002F6C">Yang Chen</font></a>, Department of Statistics, University of Michigan</li>
 <li><a href="http://www.med.nyu.edu/environmentalmedicine/research-divisions/our-labs/cuddapah-lab" target="_blank"><font color="#002F6C">Suresh Cuddapah</font></a>, Department of Environmental Medicine, New York University</li>
@@ -177,6 +177,7 @@ High-dimensional genomic data analysis is challenging because of noises and bias
 <li><a href="https://med.virginia.edu/yuh-hwa-wang-lab/" target="_blank"><font color="#002F6C">Yuh-Hwa Wang</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
 <li><a href="https://scholar.google.com/citations?user=EBpqdckAAAAJ&hl=en" target="_blank"><font color="#002F6C">Hai-Hui Xue</font></a>, Hackensack Meridian Health Center for Discovery and Innovation</li>
 <li><a href="http://faculty.virginia.edu/yanlab/" target="_blank"><font color="#002F6C">Zhen Yan</font></a>, Center for Skeletal Muscle Research, Robert M. Berne Cardiovascular Research Center, University of Virginia</li>
+<li><a href="https://engineering.virginia.edu/faculty/aidong-zhang" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science, University of Virginia</li>
 <li><a href="http://faculty.virginia.edu/tingtingzhang/" target="_blank"><font color="#002F6C">Tingting Zhang</font></a>, Department of Statistics, University of Virginia</li>
 <li><a href="https://zhulab.wordpress.com/" target="_blank"><font color="#002F6C">Yuan Zhu</font></a>, Children's Research Institute, Children’s National Medical Center</li>
 </p></ul>
@@ -217,7 +218,7 @@ High-dimensional genomic data analysis is challenging because of noises and bias
 </div>
 </div>
 <hr>
-<p align="right">Last modified: October 27, 2020</p>
+<p align="right">Last modified: November 25, 2020</p>
 
 </div>
 
