--- a/software.htm
+++ b/software.htm
@@ -87,40 +87,40 @@ ul.topnav li.icon {display: none;}
 
 <h2 align="center"><font color="#002F6C">Software</font></h2>
 <hr>
-<table style="width:100%">
+<table style="width:100%; line-height: 1.6;">
 <tr>
-<td style="width:100px; height:100px"><a href="bart/index.htm" target="_blank"><img src="images/bart_logo.jpg" style="width:80px"></a></td>
+<td style="width:120px; height:120px"><a href="bart/index.htm" target="_blank"><img src="images/bart_logo.jpg" style="width:100px"></a></td>
 <td><p>
 <b><a href="bart/index.htm" target="_blank">BART</a></b> (<u>B</u>inding <u>A</u>nalysis for <u>R</u>egulation of <u>T</u>ranscription), a bioinformatics tool for inferring functional transcription factors (TFs) that bind at genomic cis-regulatory regions to regulate gene expression in the human or mouse genomes, given a query gene set or a ChIP-seq dataset as input. [<a href="bart/index.htm" target="_blank">Package</a>] [<a href="https://academic.oup.com/bioinformatics/advance-article-abstract/doi/10.1093/bioinformatics/bty194/4956015" target="_blank">Publication</a>]<br>
 [<a href="http://bartweb.org" target="_blank"><b>BART web</b></a>]
 </p></td>
 </tr>
 <tr>
-<td style="width:100px; height:100px"><a href="https://github.com/zanglab/bart3d" target="_blank"><img src="images/bart3d_logo.jpg" style="width:80px"></a></td>
+<td style="width:120px; height:120px"><a href="https://github.com/zanglab/bart3d" target="_blank"><img src="images/bart3d_logo.jpg" style="width:100px"></a></td>
 <td><p>
 <b><a href="https://github.com/zanglab/bart3d" target="_blank">BART3D</a></b> (<u>BART</u> for <u>3D</u> genome data), a bioinformatics tool for inferring transcriptional regulators (TRs, including transcription factors and chromatin regulators) associated with differential chromatin interactions from Hi-C type 3D genome data for human or mouse. [<a href="https://github.com/zanglab/bart3d" target="_blank">Package</a>] [<a href="https://www.biorxiv.org/content/10.1101/2020.08.19.258095v1" target="_blank">Preprint</a>]
 </p></td>
 </tr>
 <tr>
-<td style="width:100px; height:100px"><a href="http://cistrome.org/MARGE/" target="_blank"><img src="images/marge_logo.jpg" style="width:80px"></a></td>
+<td style="width:120px; height:120px"><a href="http://cistrome.org/MARGE/" target="_blank"><img src="images/marge_logo.jpg" style="width:100px"></a></td>
 <td><p>
 <b><a href="http://cistrome.org/MARGE/" target="_blank">MARGE</a></b> (<u>M</u>odel-based <u>A</u>nalysis of <u>R</u>egulation of <u>G</u>ene <u>E</u>xpression), a comprehensive computational method for inference of cis-regulation of gene expression leveraging public H3K27ac genomic profiles in human or mouse. [<a href="http://cistrome.org/MARGE/" target="_blank">Package</a>] [<a href="http://genome.cshlp.org/content/26/10/1417" target="_blank">Publication</a>]
 </p></td>
 </tr>
 <tr>
-<td style="width:100px; height:100px"><a href="https://CRAN.R-project.org/package=MANCIE" target="_blank"><img src="images/mancie_logo.jpg" style="width:80px"></a></td>
+<td style="width:120px; height:120px"><a href="https://CRAN.R-project.org/package=MANCIE" target="_blank"><img src="images/mancie_logo.jpg" style="width:100px"></a></td>
 <td><p>
 <b><a href="https://CRAN.R-project.org/package=MANCIE" target="_blank">MANCIE</a></b> (<u>M</u>atrix <u>A</u>nalysis and <u>N</u>ormalization by <u>C</u>oncordant <u>I</u>nformation <u>E</u>nhancement), a computational method for high-dimensional genomic data integration. [<a href="https://CRAN.R-project.org/package=MANCIE" target="_blank">Package</a>] [<a href="http://www.nature.com/articles/ncomms11305" target="_blank">Publication</a>] 
 </p></td>
 </tr>
 <tr>
-<td style="width:100px; height:100px"><a href="https://zanglab.github.io/SICER2" target="_blank"><img src="images/recognicer_logo.jpg" style="width:80px"></a></td>
+<td style="width:120px; height:120px"><a href="https://zanglab.github.io/SICER2" target="_blank"><img src="images/recognicer_logo.jpg" style="width:100px"></a></td>
 <td><p>
 <b><a href="https://zanglab.github.io/SICER2" target="_blank">RECOGNICER</a></b> (<u>Re</u>cursive <u>co</u>arse-<u>g</u>rai<u>n</u>ing <u>i</u>dentification for <u>C</u>hIP-seq <u>e</u>nriched <u>r</u>egions), a ChIP-seq ultra-broad peak calling method. [<a href="http://journal.hep.com.cn/qb/EN/article/downloadArticleFile.do?attachType=PDF&id=28359" target="_blank">Publication</a>] [<a href="https://github.com/zanglab/recognicer" target="_blank">Source code</a>] [Package built in <a href="https://zanglab.github.io/SICER2" target="_blank">SICER2</a>] 
 </p></td>
 </tr>
 <tr>
-<td style="width:100px; height:100px"><a href="https://zanglab.github.io/SICER2" target="_blank"><img src="images/sicer_logo.jpg" style="width:80px"></a></td>
+<td style="width:120px; height:120px"><a href="https://zanglab.github.io/SICER2" target="_blank"><img src="images/sicer_logo.jpg" style="width:100px"></a></td>
 <td><p>
 <b><a href="https://zanglab.github.io/SICER2" target="_blank">SICER</a></b> (<u>S</u>patial-clustering <u>I</u>dentification of <u>C</u>hIP-<u>E</u>nriched <u>R</u>egions), a ChIP-Seq data analysis method. [<a href="http://home.gwu.edu/~wpeng/Software.htm" target="_blank">Package (v1.1)</a>] [<a href="https://academic.oup.com/bioinformatics/article/25/15/1952/212783" target="_blank">Publication</a>]<br><br>
 <a href="https://zanglab.github.io/SICER2" target="_blank"><b>SICER2</b></a> [<a href="https://zanglab.github.io/SICER2" target="_blank">Package (v2.0)</a>]
@@ -131,16 +131,16 @@ ul.topnav li.icon {display: none;}
 <hr>
 <h2 align="center"><font color="#002F6C">Resources</font></h2>
 <hr>
-<table style="width:100%">
+<table style="width:100%; line-height: 1.6;">
 <tr>
-<td style="width:100px; height:100px"><a href="bartcancer" target="_blank"><img src="images/bartcancer_logo.jpg" style="width:80px"></a></td>
+<td style="width:120px; height:120px"><a href="bartcancer" target="_blank"><img src="images/bartcancer_logo.jpg" style="width:100px"></a></td>
 <td><p>
 <b><a href="bartcancer" target="_blank">BART Cancer</a></b>, a database resource for computationally predicted transcriptional regulator activities in 15 human cancers from The Cancer Genome Atlas (TCGA). [<a href="bartcancer" target="_blank">Web resource</a>] <!--[<a href="https://academic.oup.com/bioinformatics/advance-article-abstract/doi/10.1093/bioinformatics/bty194/4956015" target="_blank">Publication</a>] [<a href="http://faculty.virginia.edu/zanglab/bartweb" target="_blank">Web interface</a>]-->
 </p></td>
 </tr>
 </table>
 <hr>
-<p align="right">Last modified: November 20, 2020</p>
+<p align="right">Last modified: November 25, 2020</p>
 </div>
 
 </body></html>
