--- a/teaching.htm
+++ b/teaching.htm
@@ -88,30 +88,30 @@ ul.topnav li.icon {display: none;}
 <h2 align="center"><font color="#002F6C">Teaching</font></h2>
 <hr>
 <h3><font color="#002F6C">BIOC 8145: Bioinformatics and Functional Analysis of Genomes</font></h3>
-<p>Spring 2020 Lectures: Analysis of ChIP-seq data</p>
-<p style="text-indent:100px">
+<p style="line-height: 1.6;">Spring 2020 Lectures: Analysis of ChIP-seq data</p>
+<p style="text-indent:100px; line-height: 1.6;">
 	Lecture 1: ChIP-seq overview and data analysis strategy: <a href="https://virginia.zoom.us/rec/play/78UkdLip-Ds3SIDAuASDAvRwW9W-Kqus1igd-PoNzke3UXYDO1OjY7EUZuQzTRyK-juXdPshs_OEfCwG" target="_blank">[Video]</a> <a href="slides/BIOC8145_2020_Zang_ChIPseq_1.pdf" target="_blank">[Slides]</a></p>
-<p style="text-indent:100px">
+<p style="text-indent:100px; line-height: 1.6;">
 	Lecture 2: ChIP-seq data analysis: QC and peak calling: <a href="https://virginia.zoom.us/rec/play/u5QofruppjM3E4HEtwSDV_J-W9W0KKys1SUa_KIJxUu8VXEENQL0YbERNuGO17pnhApLVgMKmrlwpzmm" target="_blank">[Video]</a> <a href="slides/BIOC8145_2020_Zang_ChIPseq_2.pdf" target="_blank">[Slides]</a></p>
-<p style="text-indent:100px">
+<p style="text-indent:100px; line-height: 1.6;">
 	Lecture 3: ChIP-seq data interpretation and resources: <a href="https://virginia.zoom.us/rec/play/7pN7JOitqG03HNGTswSDBf4vW9TpKK-s1nQf_qcImhvkUXBQNFagZ-ZHM-ucujLDvUG245l2HYTilk1m" target="_blank">[Video]</a> <a href="slides/BIOC8145_2020_Zang_ChIPseq_3.pdf" target="_blank">[Slides]</a>
 </p>
 <hr>
 <h3><font color="#002F6C">PHS 5705 / BIMS 8075 / BIOC 5705: Recent Advances in Public Health Genomics</font></h3>
-<p>Spring 2020 <a href="slides/PHS5705_2020_Zang_Epigenome.pdf" target="_blank">Lecture: The epigenome: Transcription factors and histone modifications</a>
+<p style="line-height: 1.6;">Spring 2020 <a href="slides/PHS5705_2020_Zang_Epigenome.pdf" target="_blank">Lecture: The epigenome: Transcription factors and histone modifications</a>
 </p>
-<p>Spring 2017 <a href="slides/PHS5705_032017_Zang_slides.pdf" target="_blank">Lecture: The Epigenome: Tools</a>
+<p style="line-height: 1.6;">Spring 2017 <a href="slides/PHS5705_032017_Zang_slides.pdf" target="_blank">Lecture: The Epigenome: Tools</a>
 </p>
 <hr>
 <h3><font color="#002F6C">BIOL 4910 / CHEM 3951: Undergraduate Research</font></h3>
-<p>Undergraduate students who are doing research training in the lab can register for credits through <a href="https://chemistry.as.virginia.edu/undergraduate-research" target="_blank">Chemistry</a> or <a href="https://bio.as.virginia.edu/undergraduate/research" target="_blank">Biology</a> departments. Please contact Dr. Zang for details.</p>
+<p style="line-height: 1.6;">Undergraduate students who are doing research training in the lab can register for credits through <a href="https://chemistry.as.virginia.edu/undergraduate-research" target="_blank">Chemistry</a> or <a href="https://bio.as.virginia.edu/undergraduate/research" target="_blank">Biology</a> departments. Please contact Dr. Zang for details.</p>
 <hr>
 <h3><font color="#002F6C">ChIP-Seq Data Analysis Workshop (NIH, May 2016)</font></h3>
-<p>
+<p style="line-height: 1.6;">
 <a href="slides/ChIPseq_SICER_CZ.pdf" target="_blank">Lecture slides: Analyzing ChIP-seq data with SICER</a>
 </p>
 <hr>
-<p align="right">Last modified: June 20, 2020</p>
+<p align="right">Last modified: November 25, 2020</p>
 </div>
 
 </body></html>
