--- a/position.htm
+++ b/position.htm
@@ -115,64 +115,64 @@ function myFunction() {
 <h2 align="center"><font color="#002F6C">Positions</font></h2>
 <hr>
 <h3><font color="#002F6C">Postdoctoral Research Associates</font></h3>
-<p>
+<p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
-</p><p>
+</p><p style="line-height: 1.6;">
 Our lab is seeking to fill at least <b>two</b> Postdoctoral Research Associate positions in the broad field of <b>bioinformatics and computational biology</b>. The research program in the lab focuses on developing computational methodologies and designing integrative data science approaches to study chromatin epigenomics and gene regulation. Current ongoing projects include: multi-omics integration-based algorithm development for transcriptional regulation prediction; model-based algorithm development for single-cell epigenomics and spatial multi-omics data analysis; statistical and computational modeling of phase-separated transcriptional condensation; global epigenetic and transcriptional regulation in T-cell immunity and various human cancer systems, etc. More information on research directions and previous publications can be found at the <a href="http://faculty.virginia.edu/zanglab">lab website</a>.
-</p><p>
+</p><p style="line-height: 1.6;">
 The Zang Lab is well funded by NIH and other agencies. Each postdoctoral scientist in the lab will receive comprehensive and personalized training in research and career development, and will have extensive opportunities for independent and collaborative research. Based at the Center for Public Health Genomics in UVA’s School of Medicine, the lab has established close collaborations with multiple labs both within and outside the university, including departments of Biochemistry and Molecular Genetics, Biomedical Engineering, Statistics, UVA Cancer Center and the new founded School of Data Science, as well as several other universities and research institutes.
-</p><p>
+</p><p style="line-height: 1.6;">
 Founded by Thomas Jefferson, University of Virginia is the first public university in the United States and is one of the most reputable research universities in the country. The university continues in its mission to develop tomorrow's leaders who are well prepared to help shape the future of the nation and the world.
-</p><p>
+</p><p style="line-height: 1.6;">
 <font color="#002F6C"><b>Requirements</b></font>
 </p>
 <ol style="padding-left: 18px;">
-<li><p>
+<li><p style="line-height: 1.6;">
 To qualify for the positions, a Ph.D. or equivalent degree in any quantitative science, including but not limited to <i>Bioinformatics, Computational Biology, Applied Mathematics, Statistics, Physics, Chemistry, Computer Science, Data Science, Engineering or a related field</i> is required by the start date;
 </p></li>
-<li><p>
+<li><p style="line-height: 1.6;">
 Proficient in <i>Python (or C/C++) & R</i> programming;
 </p></li>
-<li><p>
+<li><p style="line-height: 1.6;">
 Excellent communication and teamwork skills;
 </p></li>
-<li><p>
+<li><p style="line-height: 1.6;">
 Strong quantitative background (e.g., statistical modeling, machine learning, computational or theoretical physics, etc.) or computational genomics experience (e.g., next-generation sequencing data analysis, etc.);
 </p></li>
-<li><p>
+<li><p style="line-height: 1.6;">
 At least one peer-reviewed publication written in English in the previous area of research (not necessarily related to biology) with submitted, accepted or published status at the time of application.
 </p></li>
 </ol>
-<p>
+<p style="line-height: 1.6;">
 The University of Virginia is an equal opportunity and affirmative action employer. Women, minorities, veterans and persons with disabilities are strongly encouraged to apply.
-</p><p>
+</p><p style="line-height: 1.6;">
 <font color="#002F6C"><b>Application Process</b></font>
-</p><p>
+</p><p style="line-height: 1.6;">
 To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0013309" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Postdoc-Research-Associate-in-Bioinformatics-Computational-Biology_R0013309" target="_blank">here</a> <!--or visit <a href="https://jobs.virginia.edu" target="_blank">Jobs@UVa</a> website and search on Posting Number R0013309. Complete a candidate profile, -->
 and submit a complete application in the system. Meanwhile, Interested applicants can send a complete CV and contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Postdoc application". The posting will remain open until all positions are filled.
-</p><p>
+</p><p style="line-height: 1.6;">
 All positions are restricted and contingent on the continuation of funding.
-</p><p>
+</p><p style="line-height: 1.6;">
 For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
 <hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
-<p>
+<p style="line-height: 1.6;">
 We are recruiting graduate students for research training and completing PhD thesis in the lab. Prospective student should apply for either the <a href="https://med.virginia.edu/bims/" target="_blank">Biomedical Sciences (BIMS) graduate program</a> at the UVA School of Medicine or the <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/bme-graduate-programs" target="_blank">Biomedical Engineering (BME) graduate program</a> at the UVA School of Engineering and Applied Science. Admitted PhD students please contact Dr. Zang for rotation opportunities.
 </p>
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
-<p>
+<p style="line-height: 1.6;">
 Undergraduate students at any year are welcome to work in the lab part-time during semesters or full-time in the summer to get research training and research experience. Students majored in physics, mathematics, statistics, computer science or engineering with interests in biomedical research are especially welcome. Please contact Dr. Zang directly.
-</p><p>
+</p><p style="line-height: 1.6;">
 Undergraduate students from outside of UVA are welcome to conduct summer research in the lab. Eligible students are encouraged to apply to the  <a href="https://med.virginia.edu/summer-research-internship-program" target="_blank">Summer Research Internship Program</a> or the <a href="https://www.nsfreu.org/howtoapply/engineering" target="_blank">NSF</a> <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/training-programs/systems-bioengineering-reu" target="_blank">REU Program in Multi-Scale Systems Bioengineering</a>, although opportunities in the lab are not contingent upon admission to the summer programs. Please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> for inquiries.
 </p>
 <hr>
 <h3><font color="#002F6C">Why UVA?</font></h3>
-<p>Because this is a great place! For more information about the university and the Charlottesville area, please refer to my colleague and friend <a href="http://databio.org/" target="_blank">Dr. Nathan Sheffield</a>'s <a href="http://databio.org/whyjoin/" target="_blank">article about "Why you should consider coming to UVA"</a>.
+<p style="line-height: 1.6;">Because this is a great place! For more information about the university and the Charlottesville area, please refer to my colleague and friend <a href="http://databio.org/" target="_blank">Dr. Nathan Sheffield</a>'s <a href="http://databio.org/whyjoin/" target="_blank">article about "Why you should consider coming to UVA"</a>.
 </p>
 <hr>
-<p align="right">Last modified: June 20, 2020</p>
+<p align="right">Last modified: November 25, 2020</p>
 </div>
 
 </body></html>
